--- a/templates/clients/clients.html
+++ b/templates/clients/clients.html
@@ -39,6 +39,7 @@
                         <tr>
                             <th class="py-2 px-4 border border-gray-200">ФИО</th>
                             <th class="py-2 px-4 border border-gray-200">Телефон</th>
+                             <th class="py-2 px-4 border border-gray-200"></th>
                             <th class="py-2 px-4 border border-gray-200">Действия</th>
                         </tr>
                     </thead>
@@ -50,12 +51,30 @@
                             {{ client.full_name }}</a>
                         </td>
                         <td class="py-2 px-4 border border-gray-200">{{ client.phone }}</td>
-                        <td class="py-2 px-4 border d-flex justify-content-end border-gray-200">
-                            <a href="{% url 'client_edit_info' client.id %}" class="text-blue-500 hover:underline pr-5">Изменить</a>
-                            {% if  request.user.is_staff %}
-                                <a href="{% url 'client_delete' client.id %}" class="text-red-500 hover:underline">Удалить</a>
-                            {% endif %}
+                        <td class="py-2 px-4 border border-gray-200">
+                              <a class="hover:text-black text-green no-underline" href="{% url 'client_create_order' client.id%}">
+                              <button class="flex items-center bg-blue-500 text-white font-semibold py-2 px-6 rounded shadow-md hover:bg-blue-600 hover:shadow-lg transition duration-300 ease-in-out whitespace-nowrap">
+                                  <i class="fa-solid fa-circle-plus mr-2"></i> Заказ
+                                </button>
+                            </a>
                         </td>
+                        <td class="py-2 px-4 border no-underline border-gray-200">
+                        <div class="flex items-center">
+                            <a href="{% url 'client_edit_info' client.id %}" class="text-blue-500 hover:no-underline pr-5 no-underline">
+                                <button class="flex items-center bg-green-500 text-white font-semibold py-2 px-4 rounded shadow-md hover:bg-green-600 hover:shadow-lg transition duration-300 ease-in-out whitespace-nowrap">
+                                    <i class="no-underline fa-solid fa-pen"></i>
+                                </button>
+                            </a>
+                            {% if  request.user.is_staff %}
+                                 <a href="{% url 'client_delete' client.id %}" class="text-red-500 hover:underline no-underline">
+                                    <button class="flex items-center bg-red-500 text-white font-semibold py-2 px-4 rounded shadow-md hover:bg-red-600 hover:shadow-lg transition duration-300 ease-in-out whitespace-nowrap">
+                                      <i class="fa-solid fa-trash-can"></i>
+                                    </button>
+                                 </a>
+                            {% endif %}
+                        </div>
+                        </td>
+
                     </tr>
 
                     {% endfor %}
