--- a/templates/dashboard/update_client_order_dashboard.html
+++ b/templates/dashboard/update_client_order_dashboard.html
@@ -3,9 +3,12 @@
 
 {% block content %}
 <div class="container mx-auto">
-    <h1 class="text-2xl mt-4  font-semibold text-gray-700">Новый заказ для клиента {{ client.full_name }}</h1>
+    <div class="flex justify-between mt-4">
+         <h1 class="text-2xl  font-semibold text-gray-700">Изменение заказа для клиента {{ order.client.full_name }} {{ order.client.phone }}</h1>
+         <a class="text-xl font-semibold text-red-500 hover:text-red-700 no-underline" href="{% url 'order_delete' order.id%}"><i class="fa fa-trash-o" aria-hidden="true"></i><span class="ml-2 ">Удалить</span></a>
+    </div>
     <hr class="border-b-2 border-gray-300 my-2 mb-10">
-   <form method="post" action="" class="space-y-2 max-w-md ">
+    <form method="post" class="space-y-2 max-w-md">
         {% csrf_token %}
 
         <div>
@@ -37,19 +40,24 @@
             <label for="{{ form.state.id_for_label }}" class="block text-sm font-medium text-gray-700">Статус</label>
             {{ form.state|add_class:"form-select block w-full sm:text-sm sm:leading-5 rounded-md" }}
         </div>
-       
-       <div>
-            <label for="{{ form.worker.id_for_label }}" class="block text-sm font-medium text-gray-700">Выполняет</label>
-            {{ form.worker|add_class:"form-select block w-full sm:text-sm sm:leading-5 rounded-md" }}
-        </div>
-
-       <div>
+    
+        {% if request.user.is_staff %}
+            <div>
+                <label for="{{ form.worker.id_for_label }}" class="block text-sm font-medium text-gray-700">Выполняет</label>
+                {{ form.worker|add_class:"form-select block w-full sm:text-sm sm:leading-5 rounded-md" }}
+            </div>
+        {% else %}
+        {% endif %}
+        
+         <div>
             <label for="{{ form.is_urgent.id_for_label }}" class="block text-sm font-medium text-gray-700">Срочный</label>
             {{ form.is_urgent|add_class:"form-checkbox block mt-2 mb-2 sm:text-sm sm:leading-5 rounded-md" }}
         </div>
+        <div class="flex justify-between">
+            <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600">Обновить</button>
+            <a  href="{% url 'dashboard'%}" class="btn btn-outline-primary">Вернуться</a>
+        </div>
 
-
-        <button type="submit" class="bg-blue-500 text-white px-4 py-2 rounded-md hover:bg-blue-600">Создать</button>
     </form>
 </div>
 {% endblock %}
