--- a/templates/orders/in_progress_orders.html
+++ b/templates/orders/in_progress_orders.html
@@ -21,7 +21,7 @@
             </tr>
         </thead>
         <tbody>
-            {% for order in overdue_orders %}
+            {% for order in in_progress_orders %}
                 <tr onclick="window.location='{% url 'client_update_order' order.id %}#';" class="cursor-pointer hover:bg-gray-300 hover-border">
                     <th class="py-2 px-4 border border-gray-200">{{ order.id }}</th>
                     <td class="py-2 px-4 border border-gray-200">{% if order.is_urgent %}
