--- a/templates/workers/new_worker.html
+++ b/templates/workers/new_worker.html
@@ -50,6 +50,17 @@
                 </div>
             {% endif %}
         </div>
+         <div class="mb-2">
+                <label for="{{ form.email.id_for_label }}" class="block text-gray-700 text-md font-bold mb-2">Email</label>
+                <input type="text" id="id_email" name="email" required placeholder="Введите email" class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
+                {% if form.email.errors %}
+                    <div class="text-red-500 mt-1">
+                        {% for error in form.email.errors %}
+                            <p class="alert alert-danger" role="alert">{{ error }}</p>
+                        {% endfor %}
+                    </div>
+                {% endif %}
+        </div>
         <div class="mb-2">
             <label for="{{ form.phone.id_for_label }}" class="block text-gray-700 text-md font-bold mb-2">Телефон</label>
             <input type="text" id="id_phone" name="phone" required placeholder="Введите телефон" class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline">
