--- a/templates/workers/workers_list.html
+++ b/templates/workers/workers_list.html
@@ -35,12 +35,23 @@
                         <td class="py-2 px-4 border border-gray-200">{{ worker.position }}</td>
                         <td class="py-2 px-4 border border-gray-200">{{ worker.user.email }}</td>
                         <td class="py-2 px-4 border border-gray-200">{{ worker.phone }}</td>
-                        <td class="py-2 px-4 border d-flex justify-content-end border-gray-200">
-                            <a href="#" class="text-blue-500 hover:underline pr-5">Изменить</a>
-                            {% if  request.user.is_staff %}
-                                <a href="{% url 'worker_delete' worker.id %}" class="text-red-500 hover:underline">Удалить</a>
-                            {% endif %}
+                        <td class="py-2 px-4 border no-underline border-gray-200">
+                            <div class="flex items-center">
+                                <a href="{% url 'worker_edit' worker.id %}" class="text-blue-500 hover:no-underline pr-5 no-underline">
+                                    <button class="flex items-center bg-green-500 text-white font-semibold py-2 px-4 rounded shadow-md hover:bg-green-600 hover:shadow-lg transition duration-300 ease-in-out whitespace-nowrap">
+                                        <i class="no-underline fa-solid fa-pen"></i>
+                                    </button>
+                                </a>
+                                {% if  request.user.is_staff %}
+                                     <a href="{% url 'worker_delete' worker.id %}" class="text-red-500 hover:underline no-underline">
+                                        <button class="flex items-center bg-red-500 text-white font-semibold py-2 px-4 rounded shadow-md hover:bg-red-600 hover:shadow-lg transition duration-300 ease-in-out whitespace-nowrap">
+                                          <i class="fa-solid fa-trash-can"></i>
+                                        </button>
+                                     </a>
+                                {% endif %}
+                            </div>
                         </td>
+                        
                     </tr>
 
                     {% endfor %}
